unpackaged/main/default/objects/fferpcore__MessagingMessage__c/fferpcore__MessagingMessage__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__MessagingMessageHelp</customHelpPage>
    <description>A message</description>
    <label>Message</label>
    <nameField>
        <displayFormat>MSG-{YYYY}{MM}{0000000000}</displayFormat>
        <label>Message ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>