unpackaged/main/default/objects/fferpcore__MessagingMessage__c/fields/fferpcore__Deletable__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Deletable__c</fullName>
    <formula>OR(
			fferpcore__MessageType2__c == null,
			AND(
				fferpcore__LastAttemptedDelivery__c &lt;= fferpcore__MessageType2__r.fferpcore__ExpiryCutoff__c,
				OR(
					ISPICKVAL(fferpcore__State__c, 'Complete'),
					ISPICKVAL(fferpcore__State__c,'Errors'),
					ISPICKVAL(fferpcore__State__c,'Void'))))</formula>
    <label>Deletable</label>
    <type>Checkbox</type>
</CustomField>