unpackaged/main/default/objects/fferpcore__MessagingMessage__c/fields/fferpcore__MessageType2__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__MessageType2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Message type that this message relates to.</description>
    <label>Message Type</label>
    <referenceTo>fferpcore__MessageType__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages2</relationshipName>
    <type>Lookup</type>
</CustomField>