unpackaged/main/default/objects/fferpcore__MessagingMessage__c/fields/fferpcore__Sender__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publisher</label>
    <referenceTo>fferpcore__MessagingPublication__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>