unpackaged/main/default/objects/fferpcore__MessagingMessage__c/listViews/erpws__AllMessages.listView-meta.xml
<ListView>
    <fullName>erpws__AllMessages</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__MessageType__c</columns>
    <columns>fferpcore__Sender__c</columns>
    <columns>fferpcore__State__c</columns>
    <columns>fferpcore__LastAttemptedDelivery__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Messages</label>
</ListView>