unpackaged/main/default/objects/fferpcore__MessagingMessage__c/listViews/erpws__DeliveryErrors.listView-meta.xml
<ListView>
    <fullName>erpws__DeliveryErrors</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__MessageType__c</columns>
    <columns>fferpcore__Sender__c</columns>
    <columns>fferpcore__State__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>fferpcore__State__c</field>
        <operation>equals</operation>
        <value>Errors</value>
    </filters>
    <label>Delivery Errors</label>
</ListView>