unpackaged/main/default/objects/fferpcore__MessagingMessage__c/listViews/erpws__QueuedMessages.listView-meta.xml
<ListView>
    <fullName>erpws__QueuedMessages</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__MessageType__c</columns>
    <columns>fferpcore__Sender__c</columns>
    <columns>fferpcore__State__c</columns>
    <columns>fferpcore__LastAttemptedDelivery__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>fferpcore__State__c</field>
        <operation>equals</operation>
        <value>New,Allocated</value>
    </filters>
    <label>Queued Messages</label>
</ListView>